# n3Tc0m

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
agent/: Cargo.toml
agent/src/: employee.rs  errors.rs  main.rs  manager.rs  network.rs  run.rs  socket.rs
agent/src/executors/: command.rs  download.rs  lib.rs  playsound.rs  screenshot.rs  selfdestruct.rs
axum_auth/: Cargo.toml
axum_auth/src/: auth_basic.rs  lib.rs
cli_client/: Cargo.toml
cli_client/src/: main.rs
client/: Cargo.toml
client/src/: main.rs  ui.rs
common/: Cargo.toml
common/src/: api.rs  errors.rs
server/: Cargo.toml
server/src/: employer.rs  errors.rs  http.rs  main.rs  socket.rs
