[workspace]
resolver = "2"

members = [
    "server",
    "agent",
    "cli_client"
]

[profile.release.package.agent]
opt-level = 3

[profile.release.package."*"]
opt-level = 3

[profile.release.package.server]
opt-level = 3


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
