[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
reqwest = { version = "0.12.3", features = ["json"] }
tokio = { version = "1.4.0", features = ["full"] }
ratatui = "0.27.0-alpha.4"
serde_json = "1.0.68"
crossterm = "0.27.0"
tokio-tungstenite = "0.21.0"