[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
axum = { version = "0.7.5", features = ["ws"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.4.0", features = ["full"] }
futures = "0.3.30"
serde_json = "1.0.115"
