[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
axum = { version = "0.7.5", features = ["ws", "json", "tokio", "tracing", "tower-log"] }
axum-auth = { path = "../axum_auth"}
tokio = { version = "1.4.0", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
lazy_static = "1.4.0"
log = "0.4.21"
tracing-subscriber = "0.3.18"
